--- a/tests/recordings/test_append_blob.test_create_blob_with_lease_id.yaml
+++ b/tests/recordings/test_append_blob.test_create_blob_with_lease_id.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [eb6229e2-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [07abbfe2-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:50 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerca1d1305/blobca1d1305
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      ETag: ['"0x8D64696CFAA3077"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EBF7AA1E"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:50 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [cb118bf9-e01e-0006-117f-783853000000]
+      x-ms-request-id: [843d2110-801e-003d-628d-eb8445000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
@@ -29,24 +29,24 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [eb7b71a4-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      x-ms-client-request-id: [07c68a52-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:50 GMT']
       x-ms-lease-action: [acquire]
       x-ms-lease-duration: ['-1']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerca1d1305/blobca1d1305?comp=lease
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      ETag: ['"0x8D64696CFAA3077"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EBF7AA1E"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:50 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-lease-id: [f0629f65-d0fe-438e-8574-9f073c9fd2dc]
-      x-ms-request-id: [cb118c0e-e01e-0006-257f-783853000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-lease-id: [76e8c1d5-6387-4066-8b20-b427086fecdd]
+      x-ms-request-id: [843d2120-801e-003d-6f8d-eb8445000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
@@ -55,32 +55,32 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [eb82609a-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      x-ms-lease-id: [f0629f65-d0fe-438e-8574-9f073c9fd2dc]
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [07ccff4a-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:50 GMT']
+      x-ms-lease-id: [76e8c1d5-6387-4066-8b20-b427086fecdd]
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerca1d1305/blobca1d1305
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      ETag: ['"0x8D64696CFB88BA1"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EC04A4D0"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:50 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [cb118c15-e01e-0006-2a7f-783853000000]
+      x-ms-request-id: [843d2126-801e-003d-748d-eb8445000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [eb89324e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [07d3a9da-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:50 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainerca1d1305/blobca1d1305
   response:
@@ -89,21 +89,21 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['0']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      ETag: ['"0x8D64696CFB88BA1"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EC04A4D0"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:50 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-committed-block-count: ['0']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:50 GMT']
       x-ms-lease-duration: [infinite]
       x-ms-lease-state: [leased]
       x-ms-lease-status: [locked]
-      x-ms-request-id: [cb118c23-e01e-0006-357f-783853000000]
+      x-ms-request-id: [843d212d-801e-003d-798d-eb8445000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
