--- a/tests/recordings/test_append_blob.test_append_blob_from_0_bytes.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_0_bytes.yaml
@@ -6,48 +6,47 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [db22ef12-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:38 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [e922bfee-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb59f1281/blobb59f1281
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:57:38 GMT']
-      ETag: ['"0x8D64696BF6CEB80"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:57:58 GMT']
+      ETag: ['"0x8D6B9A4CD6CAFAA"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:57:59 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [b74641b4-d01e-000e-427f-782320000000]
+      x-ms-request-id: [34e3c931-001e-00c2-118d-ebb9dd000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [db3d69d2-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      x-ms-client-request-id: [e93c4f40-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:57:59 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerb59f1281/blobb59f1281
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>InvalidRange</Code><Message>The\
-        \ range specified is invalid for the current size of the resource.\nRequestId:b74641cb-d01e-000e-557f-782320000000\n\
-        Time:2018-11-09T22:57:39.0700396Z</Message></Error>"}
+        \ range specified is invalid for the current size of the resource.\nRequestId:34e3c958-001e-00c2-318d-ebb9dd000000\n\
+        Time:2019-04-05T08:57:59.2176992Z</Message></Error>"}
     headers:
       Content-Length: ['249']
       Content-Range: [bytes */0]
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 22:57:38 GMT']
+      Date: ['Fri, 05 Apr 2019 08:57:58 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-error-code: [InvalidRange]
-      x-ms-request-id: [b74641cb-d01e-000e-557f-782320000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [34e3c958-001e-00c2-318d-ebb9dd000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 416, message: The range specified is invalid for the current size
         of the resource.}
 - request:
@@ -55,9 +54,9 @@ interactions:
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [db43cb2e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [e942f16a-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerb59f1281/blobb59f1281
   response:
@@ -66,18 +65,18 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['0']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:57:38 GMT']
-      ETag: ['"0x8D64696BF6CEB80"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      Date: ['Fri, 05 Apr 2019 08:57:58 GMT']
+      ETag: ['"0x8D6B9A4CD6CAFAA"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:57:59 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-committed-block-count: ['0']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:57:59 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [b74641f8-d01e-000e-7b7f-782320000000]
+      x-ms-request-id: [34e3c970-001e-00c2-488d-ebb9dd000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
