--- a/tests/recordings/test_append_blob.test_append_blob_from_bytes.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_bytes.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [db7b8618-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [e9924dfa-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer927f11f2/blob927f11f2
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      ETag: ['"0x8D64696BFC3F8A8"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      ETag: ['"0x8D6B9A4CDDC0082"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:57:59 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [449edf9b-f01e-0056-157f-78275b000000]
+      x-ms-request-id: [4e6efa2f-b01e-00d0-178d-eb8dc1000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: abcdefghijklmnopqrstuvwxyz
@@ -29,34 +29,34 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['26']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [db945152-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [e9ab8fd6-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer927f11f2/blob927f11f2?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [w/zT12GS5AB9+0lsymfhOw==]
-      Date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      ETag: ['"0x8D64696BFCAB0ED"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      Date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      ETag: ['"0x8D6B9A4CDE2B87D"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:57:59 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [449edfaf-f01e-0056-277f-78275b000000]
+      x-ms-request-id: [4e6efa5d-b01e-00d0-408d-eb8dc1000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [db9aefb2-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [e9b220ee-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainer927f11f2/blob927f11f2
   response:
@@ -65,31 +65,31 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['26']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      ETag: ['"0x8D64696BFCAB0ED"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      Date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      ETag: ['"0x8D6B9A4CDE2B87D"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:57:59 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-committed-block-count: ['1']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:57:59 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [449edfd8-f01e-0056-497f-78275b000000]
+      x-ms-request-id: [4e6efa78-b01e-00d0-5a8d-eb8dc1000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [dba4ee7c-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      x-ms-client-request-id: [e9b89866-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:00 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer927f11f2/blob927f11f2
   response:
@@ -99,18 +99,18 @@ interactions:
       Content-Length: ['26']
       Content-Range: [bytes 0-25/26]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:57:39 GMT']
-      ETag: ['"0x8D64696BFCAB0ED"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      Date: ['Fri, 05 Apr 2019 08:57:59 GMT']
+      ETag: ['"0x8D6B9A4CDE2B87D"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:57:59 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-committed-block-count: ['1']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:57:39 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:57:59 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [449edfef-f01e-0056-5c7f-78275b000000]
+      x-ms-request-id: [4e6efa91-b01e-00d0-718d-eb8dc1000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
