--- a/tests/recordings/test_append_blob.test_append_blob_from_bytes_with_index.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_bytes_with_index.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [ddf365be-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:43 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [ec59939a-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:04 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer73451684/blob73451684
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:57:42 GMT']
-      ETag: ['"0x8D64696C23A693F"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:43 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:03 GMT']
+      ETag: ['"0x8D6B9A4D0A25897"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:04 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [f4450650-b01e-003c-347f-787bf0000000]
+      x-ms-request-id: [cef5f7de-401e-00e7-6d8d-eb216e000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: defghijklmnopqrstuvwxyz
@@ -29,35 +29,35 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['23']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [de0abbc4-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:43 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [ec71b876-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:04 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer73451684/blob73451684?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [B/3psgzlibEznuDABJiKeQ==]
-      Date: ['Fri, 09 Nov 2018 22:57:42 GMT']
-      ETag: ['"0x8D64696C240FA6C"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:43 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:03 GMT']
+      ETag: ['"0x8D6B9A4D0A8E976"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:04 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [f4450677-b01e-003c-587f-787bf0000000]
+      x-ms-request-id: [cef5f7fa-401e-00e7-088d-eb216e000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [de114e9e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:43 GMT']
+      x-ms-client-request-id: [ec786612-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:04 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer73451684/blob73451684
   response:
@@ -67,18 +67,18 @@ interactions:
       Content-Length: ['23']
       Content-Range: [bytes 0-22/23]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:57:42 GMT']
-      ETag: ['"0x8D64696C240FA6C"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:43 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:03 GMT']
+      ETag: ['"0x8D6B9A4D0A8E976"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:04 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-committed-block-count: ['1']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:57:43 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:04 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [f44506a5-b01e-003c-017f-787bf0000000]
+      x-ms-request-id: [cef5f819-401e-00e7-218d-eb216e000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
