--- a/tests/recordings/test_append_blob.test_append_blob_from_bytes_with_index_and_count.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_bytes_with_index_and_count.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [de4a129c-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [ecc69698-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer6a5b1a9e/blob6a5b1a9e
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:57:43 GMT']
-      ETag: ['"0x8D64696C292AF5B"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:04 GMT']
+      ETag: ['"0x8D6B9A4D110E600"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:05 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [445a5b49-701e-002a-377f-78ba6e000000]
+      x-ms-request-id: [647a26f2-201e-0019-588d-eb1d0b000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: defgh
@@ -29,35 +29,35 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['5']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [de630a5e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [ece02662-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer6a5b1a9e/blob6a5b1a9e?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [hl9cx/vXhUkC6unYIR8Xig==]
-      Date: ['Fri, 09 Nov 2018 22:57:43 GMT']
-      ETag: ['"0x8D64696C29967A1"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      ETag: ['"0x8D6B9A4D118134D"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:05 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [445a5b5f-701e-002a-487f-78ba6e000000]
+      x-ms-request-id: [647a26fe-201e-0019-618d-eb1d0b000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [de69b692-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      x-ms-client-request-id: [ece73178-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:05 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer6a5b1a9e/blob6a5b1a9e
   response:
@@ -67,18 +67,18 @@ interactions:
       Content-Length: ['5']
       Content-Range: [bytes 0-4/5]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:57:43 GMT']
-      ETag: ['"0x8D64696C29967A1"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      ETag: ['"0x8D6B9A4D118134D"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:05 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-committed-block-count: ['1']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:05 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [445a5b67-701e-002a-4f7f-78ba6e000000]
+      x-ms-request-id: [647a2708-201e-0019-698d-eb1d0b000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
