--- a/tests/recordings/test_append_blob.test_append_blob_from_bytes_with_progress.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_bytes_with_progress.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [dea267c6-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [ed36137e-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb9e117e1/blobb9e117e1
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      ETag: ['"0x8D64696C2EA8028"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      ETag: ['"0x8D6B9A4D17E88DB"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:06 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [0e766e20-301e-004b-347f-78feb1000000]
+      x-ms-request-id: [9ff21c67-f01e-0032-308d-eb69b3000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: abcdefghijklmnopqrstuvwxyz
@@ -29,35 +29,35 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['26']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [debaaa16-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [ed4df5a2-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:06 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb9e117e1/blobb9e117e1?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [w/zT12GS5AB9+0lsymfhOw==]
-      Date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      ETag: ['"0x8D64696C2F0EA3D"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      ETag: ['"0x8D6B9A4D18540D5"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:06 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [0e766e2f-301e-004b-407f-78feb1000000]
+      x-ms-request-id: [9ff21c9b-f01e-0032-608d-eb69b3000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [dec1132e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      x-ms-client-request-id: [ed54966e-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:06 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerb9e117e1/blobb9e117e1
   response:
@@ -67,18 +67,18 @@ interactions:
       Content-Length: ['26']
       Content-Range: [bytes 0-25/26]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:57:44 GMT']
-      ETag: ['"0x8D64696C2F0EA3D"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:05 GMT']
+      ETag: ['"0x8D6B9A4D18540D5"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:06 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-committed-block-count: ['1']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:57:44 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:06 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [0e766e39-301e-004b-477f-78feb1000000]
+      x-ms-request-id: [9ff21cdc-f01e-0032-1c8d-eb69b3000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
