--- a/tests/recordings/test_append_blob.test_append_blob_from_text_with_encoding.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_text_with_encoding.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [e8fb2870-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [f8ccf874-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainera1e01751/bloba1e01751
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:01 GMT']
-      ETag: ['"0x8D64696CD42DE0E"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      ETag: ['"0x8D6B9A4DD1790DF"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [7c1c8f3c-401e-000b-547f-78d75f000000]
+      x-ms-request-id: [d6fa8e50-e01e-002d-328d-ebb2a3000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -30,35 +30,35 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['36']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [e913a36e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [f8e6c0c4-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainera1e01751/bloba1e01751?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [O7c5HRnUhbM5yD4T1wnm/w==]
-      Date: ['Fri, 09 Nov 2018 22:58:01 GMT']
-      ETag: ['"0x8D64696CD499655"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      ETag: ['"0x8D6B9A4DD1E6FF1"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [7c1c8f6f-401e-000b-017f-78d75f000000]
+      x-ms-request-id: [d6fa8e71-e01e-002d-4f8d-ebb2a3000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [e91a2216-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      x-ms-client-request-id: [f8ed7d24-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:25 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainera1e01751/bloba1e01751
   response:
@@ -70,18 +70,18 @@ interactions:
       Content-Length: ['36']
       Content-Range: [bytes 0-35/36]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:58:01 GMT']
-      ETag: ['"0x8D64696CD499655"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      ETag: ['"0x8D6B9A4DD1E6FF1"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-committed-block-count: ['1']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:25 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [7c1c8f8c-401e-000b-1a7f-78d75f000000]
+      x-ms-request-id: [d6fa8e8c-e01e-002d-678d-ebb2a3000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
