--- a/tests/recordings/test_append_blob.test_append_blob_from_text_with_encoding_and_progress.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_from_text_with_encoding_and_progress.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [e95624be-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [f93f7444-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:26 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerf5ef1cb7/blobf5ef1cb7
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      ETag: ['"0x8D64696CD9D477E"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      ETag: ['"0x8D6B9A4DD881A56"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:26 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [c3d3e05d-f01e-005d-5c7f-783f2f000000]
+      x-ms-request-id: [0caf0340-201e-0116-028d-ebb6a8000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -30,24 +30,24 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['36']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [e96df9fe-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [f9570f82-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:26 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerf5ef1cb7/blobf5ef1cb7?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [O7c5HRnUhbM5yD4T1wnm/w==]
-      Date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      ETag: ['"0x8D64696CDA426E1"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:02 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:25 GMT']
+      ETag: ['"0x8D6B9A4DD8E841B"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:26 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [c3d3e075-f01e-005d-717f-783f2f000000]
+      x-ms-request-id: [0caf0348-201e-0116-0a8d-ebb6a8000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
