--- a/tests/recordings/test_append_blob.test_append_blob_with_md5.yaml
+++ b/tests/recordings/test_append_blob.test_append_blob_with_md5.yaml
@@ -6,22 +6,22 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [e9a5a03e-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:03 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [f9aea13e-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:26 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer6f1410d9/blob6f1410d9
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      ETag: ['"0x8D64696CDED9C8E"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:03 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:26 GMT']
+      ETag: ['"0x8D6B9A4DDF98E5A"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:26 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [29b80aff-a01e-0023-147f-78a0e0000000]
+      x-ms-request-id: [92d74651-d01e-0048-598d-eb03fe000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: hello world
@@ -30,24 +30,24 @@ interactions:
       Content-Length: ['11']
       Content-MD5: [XrY7u+Ae7tCTyyK7j1rNww==]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [e9be4300-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:03 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [f9c8868a-5780-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:26 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer6f1410d9/blob6f1410d9?comp=appendblock
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [XrY7u+Ae7tCTyyK7j1rNww==]
-      Date: ['Fri, 09 Nov 2018 22:58:02 GMT']
-      ETag: ['"0x8D64696CDF454D9"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:03 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:26 GMT']
+      ETag: ['"0x8D6B9A4DE0130E0"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:26 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-append-offset: ['0']
       x-ms-blob-committed-block-count: ['1']
-      x-ms-request-id: [29b80b19-a01e-0023-297f-78a0e0000000]
+      x-ms-request-id: [92d74669-d01e-0048-6e8d-eb03fe000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
