--- a/tests/recordings/test_append_blob.test_append_block_unicode.yaml
+++ b/tests/recordings/test_append_blob.test_append_block_unicode.yaml
@@ -6,21 +6,21 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [ea6c7f4c-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:04 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [067c9420-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:48 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer6f45110b/blob6f45110b
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:04 GMT']
-      ETag: ['"0x8D64696CEB474E6"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:04 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:48 GMT']
+      ETag: ['"0x8D6B9A4EAC5F742"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:48 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [5211ec03-401e-004f-6c7f-780b33000000]
+      x-ms-request-id: [7531801c-601e-011a-3b8d-eb5859000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
