--- a/tests/recordings/test_append_blob.test_create_blob.yaml
+++ b/tests/recordings/test_append_blob.test_create_blob.yaml
@@ -6,31 +6,31 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [eb0801ec-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:05 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [07409640-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainere44d0d55/blobe44d0d55
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:05 GMT']
-      ETag: ['"0x8D64696CF503C28"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:05 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EB8B18E1"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:49 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [d8f0b368-101e-0018-427f-78e2be000000]
+      x-ms-request-id: [5709fafd-701e-0028-518d-eb46dc000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [eb20eed2-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:05 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [075a0800-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainere44d0d55/blobe44d0d55
   response:
@@ -39,30 +39,30 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['0']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:58:05 GMT']
-      ETag: ['"0x8D64696CF503C28"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:05 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EB8B18E1"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:49 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-committed-block-count: ['0']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:58:05 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:49 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [d8f0b371-101e-0018-487f-78e2be000000]
+      x-ms-request-id: [5709fb0e-701e-0028-608d-eb46dc000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [eb27916a-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:05 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [076089b4-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainere44d0d55/blobe44d0d55
   response:
@@ -71,20 +71,20 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['0']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 22:58:05 GMT']
-      ETag: ['"0x8D64696CF503C28"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:05 GMT']
+      Date: ['Fri, 05 Apr 2019 08:58:49 GMT']
+      ETag: ['"0x8D6B9A4EB8B18E1"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:49 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-committed-block-count: ['0']
       x-ms-blob-type: [AppendBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 22:58:05 GMT']
+      x-ms-creation-time: ['Fri, 05 Apr 2019 08:58:49 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [d8f0b378-101e-0018-4d7f-78e2be000000]
+      x-ms-request-id: [5709fb1f-701e-0028-6c8d-eb46dc000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
