--- a/tests/recordings/test_append_blob.test_create_blob_with_metadata.yaml
+++ b/tests/recordings/test_append_blob.test_create_blob_with_metadata.yaml
@@ -6,47 +6,46 @@ interactions:
       Content-Length: ['0']
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
       x-ms-blob-type: [AppendBlob]
-      x-ms-client-request-id: [ebc4c37c-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      x-ms-client-request-id: [081ea160-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:51 GMT']
       x-ms-meta-hello: [world]
       x-ms-meta-number: ['42']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerca521310/blobca521310
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      ETag: ['"0x8D64696D00C3D08"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:50 GMT']
+      ETag: ['"0x8D6B9A4EC67BE6F"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:51 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [c3e37760-f01e-0030-187f-789501000000]
+      x-ms-request-id: [37165cc1-301e-0049-018d-eb0203000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [ebdcfb22-e472-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [0836ac88-5781-11e9-8f47-acde48001122]
+      x-ms-date: ['Fri, 05 Apr 2019 08:58:51 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerca521310/blobca521310?comp=metadata
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 22:58:06 GMT']
-      ETag: ['"0x8D64696D00C3D08"']
-      Last-Modified: ['Fri, 09 Nov 2018 22:58:06 GMT']
+      Content-Length: ['0']
+      Date: ['Fri, 05 Apr 2019 08:58:50 GMT']
+      ETag: ['"0x8D6B9A4EC67BE6F"']
+      Last-Modified: ['Fri, 05 Apr 2019 08:58:51 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-meta-hello: [world]
       x-ms-meta-number: ['42']
-      x-ms-request-id: [c3e37775-f01e-0030-287f-789501000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [37165cd3-301e-0049-0f8d-eb0203000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
