Added update page from URL for page blobs

--- a/tests/recordings/test_page_blob.test_get_page_ranges_2_pages.yaml
+++ b/tests/recordings/test_page_blob.test_get_page_ranges_2_pages.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['2048']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [80f05c80-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:26 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a26e5786-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:39 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer7c8a1123/blob7c8a1123
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:26 GMT']
-      ETag: ['"0x8D646986539E61E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:26 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:39 GMT']
+      ETag: ['"0x8D6BBFA86B5F6B5"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:39 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [e11f7ebb-101e-0057-7081-7826a6000000]
+      x-ms-request-id: [f3592263-201e-0046-35e3-ed8a42000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -38,27 +38,27 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [810f60f8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:26 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a2869d0a-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:39 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer7c8a1123/blob7c8a1123?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [W6YMGZnyS7JYw3mLPRurBQ==]
-      Date: ['Fri, 09 Nov 2018 23:09:26 GMT']
-      ETag: ['"0x8D646986540ECAB"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:26 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:39 GMT']
+      ETag: ['"0x8D6BBFA86BCAEB3"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:39 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [e11f7ebe-101e-0057-7281-7826a6000000]
+      x-ms-request-id: [f3592274-201e-0046-41e3-ed8a42000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -74,50 +74,49 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [81163f90-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:26 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a28d2846-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:39 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=1024-1535]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer7c8a1123/blob7c8a1123?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [W6YMGZnyS7JYw3mLPRurBQ==]
-      Date: ['Fri, 09 Nov 2018 23:09:26 GMT']
-      ETag: ['"0x8D646986547A50E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:26 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:39 GMT']
+      ETag: ['"0x8D6BBFA86C2CA4F"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:39 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [e11f7ec4-101e-0057-7781-7826a6000000]
+      x-ms-request-id: [f3592281-201e-0046-4ae3-ed8a42000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [811cf2b8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:26 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a2934d0c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:39 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer7c8a1123/blob7c8a1123?comp=pagelist
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><PageList><PageRange><Start>0</Start><End>511</End></PageRange><PageRange><Start>1024</Start><End>1535</End></PageRange></PageList>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:26 GMT']
-      ETag: ['"0x8D646986547A50E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:26 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:39 GMT']
+      ETag: ['"0x8D6BBFA86C2CA4F"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:39 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-blob-content-length: ['2048']
-      x-ms-request-id: [e11f7ecd-101e-0057-7f81-7826a6000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [f3592294-201e-0046-5be3-ed8a42000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
