--- a/tests/recordings/test_page_blob.test_blob_tier_copy_blob.yaml
+++ b/tests/recordings/test_page_blob.test_blob_tier_copy_blob.yaml
@@ -4,83 +4,83 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7b43d7c6-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [99b1f224-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:24 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2?restype=container
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985F97EADC"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:24 GMT']
+      ETag: ['"0x8D6BBFA7E05B9DA"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [2159cd9e-801c-002b-4e81-783388000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [645a9a1e-c01c-0005-27e3-edb34f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-access-tier: [P10]
       x-ms-blob-content-length: ['1024']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [7b67602e-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [99d6a13c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985F9F0A64"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:24 GMT']
+      ETag: ['"0x8D6BBFA7E0C2614"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [2159cdc4-801c-002b-7481-783388000000]
+      x-ms-request-id: [645a9a2a-c01c-0005-33e3-edb34f000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-access-tier: [P30]
-      x-ms-client-request-id: [7b7fd712-e474-11e8-9ac5-acde48001122]
+      x-ms-client-request-id: [99dcf74e-59d6-11e9-842a-acde48001122]
       x-ms-copy-source: ['https://xclientdevpremium2.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2']
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob1copy
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FBBBF96"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E1A598D"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-copy-id: [4b9b61f1-953c-410c-bd56-2a4a28ae4b2c]
+      x-ms-copy-id: [bdce7cd6-32fa-4eb7-a2e1-0b3505bad668]
       x-ms-copy-status: [success]
-      x-ms-request-id: [2159ce16-801c-002b-4681-783388000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [645a9a30-c01c-0005-39e3-edb34f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 202, message: Accepted}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7b8c8232-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [99ed1566-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob1copy
   response:
@@ -89,85 +89,84 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FBBBF96"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E1A598D"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [P30]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-copy-completion-time: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-copy-id: [4b9b61f1-953c-410c-bd56-2a4a28ae4b2c]
+      x-ms-copy-completion-time: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-copy-id: [bdce7cd6-32fa-4eb7-a2e1-0b3505bad668]
       x-ms-copy-progress: [1024/1024]
       x-ms-copy-source: ['https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2']
       x-ms-copy-status: [success]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:25 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [2159ce40-801c-002b-7081-783388000000]
+      x-ms-request-id: [645a9a3a-c01c-0005-43e3-edb34f000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['1024']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [7b92d830-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [99f34094-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FCA6856"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E29024F"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [2159ce53-801c-002b-0381-783388000000]
+      x-ms-request-id: [645a9a3f-c01c-0005-48e3-edb34f000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-access-tier: [P60]
-      x-ms-client-request-id: [7b999ce2-e474-11e8-9ac5-acde48001122]
+      x-ms-client-request-id: [99f9e96c-59d6-11e9-842a-acde48001122]
       x-ms-copy-source: ['https://xclientdevpremium2.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2']
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob2copy
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FD42E2E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E3204B1"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-copy-id: [34fa9cf4-c2ad-400c-b91c-807751f62399]
+      x-ms-copy-id: [32bbab0c-ade0-4541-868c-312b16e498d7]
       x-ms-copy-status: [success]
-      x-ms-request-id: [2159ce6a-801c-002b-1a81-783388000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [645a9a44-c01c-0005-4de3-edb34f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 202, message: Accepted}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7ba405d8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9a03bab4-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob2copy
   response:
@@ -176,59 +175,58 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FD42E2E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E3204B1"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [P60]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-copy-completion-time: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-copy-id: [34fa9cf4-c2ad-400c-b91c-807751f62399]
+      x-ms-copy-completion-time: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-copy-id: [32bbab0c-ade0-4541-868c-312b16e498d7]
       x-ms-copy-progress: [1024/1024]
       x-ms-copy-source: ['https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2']
       x-ms-copy-status: [success]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:25 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [2159ce8e-801c-002b-3e81-783388000000]
+      x-ms-request-id: [645a9a49-c01c-0005-52e3-edb34f000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7ba9ecc8-e474-11e8-9ac5-acde48001122]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9a0a0248-59d6-11e9-842a-acde48001122]
       x-ms-copy-source: ['https://xclientdevpremium2.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2']
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3copy
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FE21383"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E40382D"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-copy-id: [062c0c45-2def-4494-97e4-51be77ddd3a4]
+      x-ms-copy-id: [838abb01-7d60-4d68-930a-85c100a9c508]
       x-ms-copy-status: [success]
-      x-ms-request-id: [2159cea3-801c-002b-5381-783388000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [645a9a50-c01c-0005-59e3-edb34f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 202, message: Accepted}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7bb0abee-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9a10ec84-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3copy
   response:
@@ -237,45 +235,44 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      ETag: ['"0x8D646985FE21383"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      ETag: ['"0x8D6BBFA7E40382D"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [P10]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-copy-completion-time: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-copy-id: [062c0c45-2def-4494-97e4-51be77ddd3a4]
+      x-ms-copy-completion-time: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-copy-id: [838abb01-7d60-4d68-930a-85c100a9c508]
       x-ms-copy-progress: [1024/1024]
       x-ms-copy-source: ['https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2/blob3bf30fd2']
       x-ms-copy-status: [success]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:25 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [2159ceb8-801c-002b-6881-783388000000]
+      x-ms-request-id: [645a9a56-c01c-0005-5fe3-edb34f000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7bb699be-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:17 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9a172982-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:25 GMT']
+      x-ms-version: ['2018-11-09']
     method: DELETE
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer3bf30fd2?restype=container
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:17 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:25 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [2159cecd-801c-002b-7d81-783388000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [645a9a5d-c01c-0005-66e3-edb34f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 202, message: Accepted}
 version: 1
