--- a/tests/recordings/test_page_blob.test_blob_tier_set_tier_api.yaml
+++ b/tests/recordings/test_page_blob.test_blob_tier_set_tier_api.yaml
@@ -4,56 +4,56 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7c906342-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9b30640a-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111?restype=container
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
-      ETag: ['"0x8D6469860D84156"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:26 GMT']
+      ETag: ['"0x8D6BBFA7F77B018"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [bca7cd5d-701c-007a-0881-782d7d000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [6abecf3c-a01c-0051-3fe3-ed59c5000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['1024']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [7ca6eba8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [9b485dc6-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111/blob6e171111
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
-      ETag: ['"0x8D6469860DEA473"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:26 GMT']
+      ETag: ['"0x8D6BBFA7F7E2436"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [bca7cd70-701c-007a-1b81-782d7d000000]
+      x-ms-request-id: [6abecf4a-a01c-0051-4de3-ed59c5000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7cad5a42-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9b4f1d3c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111/blob6e171111
   response:
@@ -62,76 +62,74 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
-      ETag: ['"0x8D6469860DEA473"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:26 GMT']
+      ETag: ['"0x8D6BBFA7F7E2436"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [P10]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:27 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [bca7cd7e-701c-007a-2981-782d7d000000]
+      x-ms-request-id: [6abecf5b-a01c-0051-5ee3-ed59c5000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7cb38160-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9b551b92-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111?restype=container&comp=list
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<EnumerationResults\
         \ ServiceEndpoint=\"https://premiumstoragename.blob.core.windows.net/\" ContainerName=\"\
-        utpremiumcontainer6e171111\"><Blobs><Blob><Name>blob6e171111</Name><Properties><Creation-Time>Fri,\
-        \ 09 Nov 2018 23:09:19 GMT</Creation-Time><Last-Modified>Fri, 09 Nov 2018\
-        \ 23:09:19 GMT</Last-Modified><Etag>0x8D6469860DEA473</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding/><Content-Language/><Content-MD5/><Cache-Control/><Content-Disposition/><x-ms-blob-sequence-number>0</x-ms-blob-sequence-number><BlobType>PageBlob</BlobType><AccessTier/><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties></Blob></Blobs><NextMarker/></EnumerationResults>"}
+        utpremiumcontainer6e171111\"><Blobs><Blob><Name>blob6e171111</Name><Properties><Creation-Time>Mon,\
+        \ 08 Apr 2019 08:16:27 GMT</Creation-Time><Last-Modified>Mon, 08 Apr 2019\
+        \ 08:16:27 GMT</Last-Modified><Etag>0x8D6BBFA7F7E2436</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding/><Content-Language/><Content-MD5/><Cache-Control/><Content-Disposition/><x-ms-blob-sequence-number>0</x-ms-blob-sequence-number><BlobType>PageBlob</BlobType><AccessTier/><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties></Blob></Blobs><NextMarker/></EnumerationResults>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:26 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
-      x-ms-request-id: [bca7cd8f-701c-007a-3a81-782d7d000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [6abecf6d-a01c-0051-70e3-ed59c5000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-access-tier: [P50]
-      x-ms-client-request-id: [7cb960f8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [9b5b1704-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111/blob6e171111?comp=tier
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [bca7cda3-701c-007a-4e81-782d7d000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [6abecf74-a01c-0051-77e3-ed59c5000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7cbf9734-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9b676a68-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111/blob6e171111
   response:
@@ -140,64 +138,62 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
-      ETag: ['"0x8D6469860DEA473"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      ETag: ['"0x8D6BBFA7F7E2436"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [P50]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:27 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [bca7cdb1-701c-007a-5c81-782d7d000000]
+      x-ms-request-id: [6abecf8c-a01c-0051-0fe3-ed59c5000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7cc5a002-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9b6e75b0-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111?restype=container&comp=list
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<EnumerationResults\
         \ ServiceEndpoint=\"https://premiumstoragename.blob.core.windows.net/\" ContainerName=\"\
-        utpremiumcontainer6e171111\"><Blobs><Blob><Name>blob6e171111</Name><Properties><Creation-Time>Fri,\
-        \ 09 Nov 2018 23:09:19 GMT</Creation-Time><Last-Modified>Fri, 09 Nov 2018\
-        \ 23:09:19 GMT</Last-Modified><Etag>0x8D6469860DEA473</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding/><Content-Language/><Content-MD5/><Cache-Control/><Content-Disposition/><x-ms-blob-sequence-number>0</x-ms-blob-sequence-number><BlobType>PageBlob</BlobType><AccessTier>P50</AccessTier><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties></Blob></Blobs><NextMarker/></EnumerationResults>"}
+        utpremiumcontainer6e171111\"><Blobs><Blob><Name>blob6e171111</Name><Properties><Creation-Time>Mon,\
+        \ 08 Apr 2019 08:16:27 GMT</Creation-Time><Last-Modified>Mon, 08 Apr 2019\
+        \ 08:16:27 GMT</Last-Modified><Etag>0x8D6BBFA7F7E2436</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding/><Content-Language/><Content-MD5/><Cache-Control/><Content-Disposition/><x-ms-blob-sequence-number>0</x-ms-blob-sequence-number><BlobType>PageBlob</BlobType><AccessTier>P50</AccessTier><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties></Blob></Blobs><NextMarker/></EnumerationResults>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
-      x-ms-request-id: [bca7cdbd-701c-007a-6881-782d7d000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [6abecf98-a01c-0051-1be3-ed59c5000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7ccb9ae8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9b747b9a-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: DELETE
     uri: https://premiumstoragename.blob.core.windows.net/utpremiumcontainer6e171111?restype=container
   response:
     body: {string: ''}
     headers:
       Content-Length: ['0']
-      Date: ['Fri, 09 Nov 2018 23:09:18 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      x-ms-request-id: [bca7cdcb-701c-007a-7681-782d7d000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [6abecfa6-a01c-0051-29e3-ed59c5000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 202, message: Accepted}
 version: 1
