--- a/tests/recordings/test_page_blob.test_clear_page.yaml
+++ b/tests/recordings/test_page_blob.test_clear_page.yaml
@@ -4,60 +4,60 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [7cf5c8a4-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [9bcf130c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:28 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerbbff0c0b/blobbbff0c0b
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      ETag: ['"0x8D646986138EAB4"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      ETag: ['"0x8D6BBFA8017CBB0"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:28 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [cb1558da-e01e-0006-6381-783853000000]
+      x-ms-request-id: [94e533ce-201e-0020-25e3-ed3818000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7d0e92da-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:20 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9be893e0-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:28 GMT']
       x-ms-page-write: [clear]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerbbff0c0b/blobbbff0c0b?comp=page
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:19 GMT']
-      ETag: ['"0x8D64698613FF149"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:20 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      ETag: ['"0x8D6BBFA801E83A9"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:28 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [cb1558e5-e01e-0006-6d81-783853000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [94e533d9-201e-0020-2ee3-ed3818000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7d1520a0-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:20 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9bef2674-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:28 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerbbff0c0b/blobbbff0c0b
   response:
@@ -80,18 +80,18 @@ interactions:
       Content-Length: ['512']
       Content-Range: [bytes 0-511/512]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:20 GMT']
-      ETag: ['"0x8D64698613FF149"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:20 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:27 GMT']
+      ETag: ['"0x8D6BBFA801E83A9"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:28 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:19 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:28 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [cb1558fa-e01e-0006-7f81-783853000000]
+      x-ms-request-id: [94e533e6-201e-0020-3ae3-ed3818000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
