--- a/tests/recordings/test_page_blob.test_create_blob.yaml
+++ b/tests/recordings/test_page_blob.test_create_blob.yaml
@@ -4,34 +4,34 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['1024']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [7da87e72-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:21 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [9cbbe312-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:29 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerc8ac0c7a/blobc8ac0c7a
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:20 GMT']
-      ETag: ['"0x8D6469861EAB24E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:21 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:29 GMT']
+      ETag: ['"0x8D6BBFA81053D20"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:30 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [46b243dc-501e-001f-4d81-78143b000000]
+      x-ms-request-id: [284fe05f-301e-0059-72e3-ed5152000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7dc11fb8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:21 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9cd5dac4-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:30 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainerc8ac0c7a/blobc8ac0c7a
   response:
@@ -40,20 +40,20 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:20 GMT']
-      ETag: ['"0x8D6469861EAB24E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:21 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:29 GMT']
+      ETag: ['"0x8D6BBFA81053D20"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:30 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:21 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:30 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [46b243f6-501e-001f-6481-78143b000000]
+      x-ms-request-id: [284fe094-301e-0059-22e3-ed5152000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
