--- a/tests/recordings/test_page_blob.test_create_blob_from_bytes_with_index_and_count.yaml
+++ b/tests/recordings/test_page_blob.test_create_blob_from_bytes_with_index_and_count.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['1024']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [7e5ed226-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:22 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [9de9ae4a-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:31 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer32b119bf/blob32b119bf
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:22 GMT']
-      ETag: ['"0x8D6469862A10EE2"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:31 GMT']
+      ETag: ['"0x8D6BBFA82320D07"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [5065f855-f01e-0019-3081-78e343000000]
+      x-ms-request-id: [fc3c162c-001e-0096-27e3-ed36e0000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -47,36 +47,36 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['1024']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7e76929e-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9e02c89e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:32 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-1023]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer32b119bf/blob32b119bf?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [ITu4CeqhvvWxhJEdWXvwNw==]
-      Date: ['Fri, 09 Nov 2018 23:09:22 GMT']
-      ETag: ['"0x8D6469862A81580"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:31 GMT']
+      ETag: ['"0x8D6BBFA8238EC1C"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [5065f87e-f01e-0019-5281-78e343000000]
+      x-ms-request-id: [fc3c163d-001e-0096-34e3-ed36e0000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7e7f1c3e-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:22 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9e0d7f78-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:32 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainer32b119bf/blob32b119bf
   response:
@@ -85,31 +85,31 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['1024']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:22 GMT']
-      ETag: ['"0x8D6469862A81580"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:31 GMT']
+      ETag: ['"0x8D6BBFA8238EC1C"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:32 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [5065f8a7-f01e-0019-7981-78e343000000]
+      x-ms-request-id: [fc3c166f-001e-0096-5ee3-ed36e0000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [7e85499c-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [9e13b7d0-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:32 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer32b119bf/blob32b119bf
   response:
@@ -138,18 +138,18 @@ interactions:
       Content-Length: ['1024']
       Content-Range: [bytes 0-1023/1024]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:22 GMT']
-      ETag: ['"0x8D6469862A81580"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:31 GMT']
+      ETag: ['"0x8D6BBFA8238EC1C"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:22 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:32 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [5065f8be-f01e-0019-0e81-78e343000000]
+      x-ms-request-id: [fc3c168e-001e-0096-75e3-ed36e0000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
