--- a/tests/recordings/test_page_blob.test_create_blob_with_md5_small.yaml
+++ b/tests/recordings/test_page_blob.test_create_blob_with_md5_small.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [80023398-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:24 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a1136b4c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:37 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb3e31272/blobb3e31272
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:24 GMT']
-      ETag: ['"0x8D646986445390E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:25 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:36 GMT']
+      ETag: ['"0x8D6BBFA855BA5E4"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:37 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [b6bc1926-501e-005b-3081-78c857000000]
+      x-ms-request-id: [3127da0b-201e-006f-5ce3-edfc00000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,26 +39,26 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['512']
       Content-MD5: [lL2HkEFpCsPA0gBqPpDq4Q==]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [801b38c0-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:25 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a12c37e4-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:37 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb3e31272/blobb3e31272?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [lL2HkEFpCsPA0gBqPpDq4Q==]
-      Date: ['Fri, 09 Nov 2018 23:09:24 GMT']
-      ETag: ['"0x8D64698644C8DCE"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:25 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:36 GMT']
+      ETag: ['"0x8D6BBFA856284F4"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:37 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [b6bc1944-501e-005b-4581-78c857000000]
+      x-ms-request-id: [3127da1f-201e-006f-69e3-edfc00000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
