--- a/tests/recordings/test_page_blob.test_create_blob_with_metadata.yaml
+++ b/tests/recordings/test_page_blob.test_create_blob_with_metadata.yaml
@@ -4,50 +4,49 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [8058f926-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:25 GMT']
+      x-ms-client-request-id: [a18df560-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:37 GMT']
       x-ms-meta-hello: [world]
       x-ms-meta-number: ['42']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainera2b71235/bloba2b71235
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:24 GMT']
-      ETag: ['"0x8D64698649BD264"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:25 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:37 GMT']
+      ETag: ['"0x8D6BBFA85D6B8AB"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:38 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [55ffffda-801e-003f-5281-7878f7000000]
+      x-ms-request-id: [18def96a-201e-00a3-5ce3-ed98b5000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [8071543a-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:25 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a1a75e2e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:38 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainera2b71235/bloba2b71235?comp=metadata
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:24 GMT']
-      ETag: ['"0x8D64698649BD264"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:25 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:37 GMT']
+      ETag: ['"0x8D6BBFA85D6B8AB"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:38 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-meta-hello: [world]
       x-ms-meta-number: ['42']
-      x-ms-request-id: [55fffff7-801e-003f-6a81-7878f7000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [18def983-201e-00a3-6ee3-ed98b5000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
