--- a/tests/recordings/test_page_blob.test_get_page_ranges_diff.yaml
+++ b/tests/recordings/test_page_blob.test_get_page_ranges_diff.yaml
@@ -4,48 +4,49 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['2048']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [81576e52-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a2e8be2c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865995B32"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA87317EC5"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [5cf53df4-501e-0014-4f81-780c4f000000]
+      x-ms-request-id: [c55f4e4b-c01e-0065-3de3-ede589000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [816ed740-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a3025b3e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=snapshot
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865995B32"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA87317EC5"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [5cf53e14-501e-0014-6e81-780c4f000000]
-      x-ms-snapshot: ['2018-11-09T23:09:27.3486783Z']
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [c55f4e57-c01e-0065-46e3-ede589000000]
+      x-ms-request-server-encrypted: ['false']
+      x-ms-snapshot: ['2019-04-08T08:16:40.4340186Z']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -79,122 +80,121 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['1536']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [8175ddc4-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a30a7846-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-1535]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [wbCo1OWRVwE44buUTYRbiA==]
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865A76850"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA87409CBB"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [5cf53e32-501e-0014-0b81-780c4f000000]
+      x-ms-request-id: [c55f4e62-c01e-0065-51e3-ede589000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [817cdb06-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a311411c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=snapshot
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865A76850"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA87409CBB"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [5cf53e55-501e-0014-2d81-780c4f000000]
-      x-ms-snapshot: ['2018-11-09T23:09:27.4377621Z']
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [c55f4e6a-c01e-0065-58e3-ede589000000]
+      x-ms-request-server-encrypted: ['false']
+      x-ms-snapshot: ['2019-04-08T08:16:40.5310877Z']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [81836ed0-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a31a2fd4-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
       x-ms-page-write: [clear]
       x-ms-range: [bytes=512-1023]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=page
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865B48AD6"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA874FBAAC"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [5cf53e82-501e-0014-5881-780c4f000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [c55f4e6f-c01e-0065-5de3-ede589000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [8189ddf6-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a32056ac-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
-    uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=pagelist&prevsnapshot=2018-11-09T23%3A09%3A27.3486783Z
+    uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=pagelist&prevsnapshot=2019-04-08T08%3A16%3A40.4340186Z
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><PageList><PageRange><Start>0</Start><End>511</End></PageRange><ClearRange><Start>512</Start><End>1023</End></ClearRange><PageRange><Start>1024</Start><End>1535</End></PageRange></PageList>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865B48AD6"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA874FBAAC"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-blob-content-length: ['2048']
-      x-ms-request-id: [5cf53ea8-501e-0014-7e81-780c4f000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [c55f4e76-c01e-0065-64e3-ede589000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [81907c6a-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a326d982-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
-    uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=pagelist&prevsnapshot=2018-11-09T23%3A09%3A27.4377621Z
+    uri: https://storagename.blob.core.windows.net/utcontainer4b43101b/blob4b43101b?comp=pagelist&prevsnapshot=2019-04-08T08%3A16%3A40.5310877Z
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><PageList><ClearRange><Start>512</Start><End>1023</End></ClearRange></PageList>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D6469865B48AD6"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:27 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA874FBAAC"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-blob-content-length: ['2048']
-      x-ms-request-id: [5cf53ec9-501e-0014-1d81-780c4f000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [c55f4e82-c01e-0065-6fe3-ede589000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
