--- a/tests/recordings/test_page_blob.test_get_page_ranges_no_pages.yaml
+++ b/tests/recordings/test_page_blob.test_get_page_ranges_no_pages.yaml
@@ -4,48 +4,47 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [81c86c38-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a3931cbe-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:41 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer902711ce/blob902711ce
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D64698660B9974"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA87DA397F"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:41 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [9178826c-901e-0002-7681-78cdd1000000]
+      x-ms-request-id: [fc3c2972-001e-0096-2ce3-ed36e0000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [81e1a9f0-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:28 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a3aaed62-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:41 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer902711ce/blob902711ce?comp=pagelist
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><PageList />"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:27 GMT']
-      ETag: ['"0x8D64698660B9974"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:40 GMT']
+      ETag: ['"0x8D6BBFA87DA397F"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:41 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-blob-content-length: ['512']
-      x-ms-request-id: [917882b3-901e-0002-3981-78cdd1000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [fc3c298e-001e-0096-45e3-ed36e0000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
