--- a/tests/recordings/test_page_blob.test_resize_blob.yaml
+++ b/tests/recordings/test_page_blob.test_resize_blob.yaml
@@ -4,58 +4,58 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['1024']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [82f4712e-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:29 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a54ac7e6-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:44 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerc9b70c98/blobc9b70c98
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:29 GMT']
-      ETag: ['"0x8D64698673657AF"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:44 GMT']
+      ETag: ['"0x8D6BBFA8993F9A6"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:44 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [1a633be5-e01e-0042-6481-78e43f000000]
+      x-ms-request-id: [b36919bd-e01e-011b-2de3-ed3c13000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
-      x-ms-client-request-id: [830c1040-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a564a22e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:44 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerc9b70c98/blobc9b70c98?comp=properties
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:29 GMT']
-      ETag: ['"0x8D64698673DAC73"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:44 GMT']
+      ETag: ['"0x8D6BBFA899A8A83"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:44 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [1a633bfc-e01e-0042-7a81-78e43f000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [b36919dd-e01e-011b-4ae3-ed3c13000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [83144882-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a56b054c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:44 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainerc9b70c98/blobc9b70c98
   response:
@@ -64,20 +64,20 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['512']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:29 GMT']
-      ETag: ['"0x8D64698673DAC73"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:44 GMT']
+      ETag: ['"0x8D6BBFA899A8A83"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:44 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:44 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [1a633c25-e01e-0042-2081-78e43f000000]
+      x-ms-request-id: [b36919f8-e01e-011b-61e3-ed3c13000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
