--- a/tests/recordings/test_page_blob.test_update_8tb_blob_page.yaml
+++ b/tests/recordings/test_page_blob.test_update_8tb_blob_page.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['8796093022208']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [83c71656-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a638fa4c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer49de0ff2/blob49de0ff2
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D646986809B919"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A80A79E"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [3c394e06-b01e-001e-4f81-7815c6000000]
+      x-ms-request-id: [06efa14b-101e-00cd-69e3-ed319c000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -38,36 +38,36 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [83df72dc-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a6513bd4-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:45 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=8796093021696-8796093022207]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer49de0ff2/blob49de0ff2?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [05K9Kyd7rImZJPAI2Q0VTw==]
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D646986810E6C4"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A871169"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [3c394e2a-b01e-001e-6e81-7815c6000000]
+      x-ms-request-id: [06efa153-101e-00cd-6fe3-ed319c000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [83e65822-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a6579c5e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:46 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainer49de0ff2/blob49de0ff2
   response:
@@ -76,55 +76,54 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['8796093022208']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D646986810E6C4"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A871169"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:45 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [3c394e43-b01e-001e-0381-7815c6000000]
+      x-ms-request-id: [06efa15d-101e-00cd-76e3-ed319c000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [83edbdba-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a65dec4e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:46 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer49de0ff2/blob49de0ff2?comp=pagelist
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><PageList><PageRange><Start>8796093021696</Start><End>8796093022207</End></PageRange></PageList>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D646986810E6C4"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A871169"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      Vary: [Origin]
       x-ms-blob-content-length: ['8796093022208']
-      x-ms-request-id: [3c394e60-b01e-001e-1e81-7815c6000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [06efa16e-101e-00cd-04e3-ed319c000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [83f411f6-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a6640174-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:46 GMT']
       x-ms-range: [bytes=8796093021696-8796093022207]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer49de0ff2/blob49de0ff2
   response:
@@ -144,18 +143,18 @@ interactions:
       Content-Length: ['512']
       Content-Range: [bytes 8796093021696-8796093022207/8796093022208]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D646986810E6C4"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A871169"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:31 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:45 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [3c394e83-b01e-001e-3c81-7815c6000000]
+      x-ms-request-id: [06efa182-101e-00cd-18e3-ed319c000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
