--- a/tests/recordings/test_page_blob.test_update_page.yaml
+++ b/tests/recordings/test_page_blob.test_update_page.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [842ce878-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a6c6930c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:46 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerc95f0c87/blobc95f0c87
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      ETag: ['"0x8D6469868705BD8"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:46 GMT']
+      ETag: ['"0x8D6BBFA8B0F45FD"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:46 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [6396e009-e01e-0049-1681-78fc4b000000]
+      x-ms-request-id: [77758713-601e-00af-5de3-ed7644000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -38,37 +38,37 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [844678d8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a6dfe514-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:46 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerc95f0c87/blobc95f0c87?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [/MQfYG4/fjv08vMtjghvDQ==]
-      Date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      ETag: ['"0x8D646986877D7BA"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:46 GMT']
+      ETag: ['"0x8D6BBFA8B15D6DB"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:46 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [6396e032-e01e-0049-3881-78fc4b000000]
+      x-ms-request-id: [77758721-601e-00af-68e3-ed7644000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [844d68be-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a6e76dc0-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:46 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerc95f0c87/blobc95f0c87
   response:
@@ -88,18 +88,18 @@ interactions:
       Content-Length: ['512']
       Content-Range: [bytes 0-511/512]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      ETag: ['"0x8D646986877D7BA"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:46 GMT']
+      ETag: ['"0x8D6BBFA8B15D6DB"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:46 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['0']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:46 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [6396e04a-e01e-0049-4b81-78fc4b000000]
+      x-ms-request-id: [77758732-601e-00af-76e3-ed7644000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
