--- a/tests/recordings/test_page_blob.test_update_page_fail.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_fail.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['2048']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [8486c320-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:32 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a73d466e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:47 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerde50e82/blobde50e82
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      ETag: ['"0x8D6469868C98DD6"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:47 GMT']
+      ETag: ['"0x8D6BBFA8B861238"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:47 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [5dae8202-d01e-0041-2481-78e738000000]
+      x-ms-request-id: [283cb66f-901e-007d-4ce3-edc81c000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -38,26 +38,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [849f1a9c-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a756f960-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:47 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerde50e82/blobde50e82?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [gOvVSCGsM0vqntIq6rH2RQ==]
-      Date: ['Fri, 09 Nov 2018 23:09:31 GMT']
-      ETag: ['"0x8D6469868D0E295"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:32 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:47 GMT']
+      ETag: ['"0x8D6BBFA8B8D3F7B"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:47 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [5dae8210-d01e-0041-3081-78e738000000]
+      x-ms-request-id: [283cb67c-901e-007d-55e3-edc81c000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
