--- a/tests/recordings/test_page_blob.test_update_page_unicode.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_unicode.yaml
@@ -4,24 +4,24 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [8696057c-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:36 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [c76f0eae-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:41 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer3c780fcd/blob3c780fcd
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:35 GMT']
-      ETag: ['"0x8D646986AD8EFB7"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:36 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:41 GMT']
+      ETag: ['"0x8D6BBFAABB78FAE"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:41 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [65e46ba3-401e-0044-2881-781347000000]
+      x-ms-request-id: [ccfa23e9-301e-0095-28e3-ed35e7000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
