--- a/tests/recordings/test_page_blob.test_update_page_with_md5.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_with_md5.yaml
@@ -4,25 +4,25 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [86ddd5c8-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:36 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [c7d7fa7c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:42 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4c9b1007/blob4c9b1007
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:35 GMT']
-      ETag: ['"0x8D646986B212DAF"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:36 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:42 GMT']
+      ETag: ['"0x8D6BBFAAC20C4C2"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:42 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [3c395a82-b01e-001e-7581-7815c6000000]
+      x-ms-request-id: [aed32d2d-101e-00a0-13e3-ed9bb2000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,26 +39,26 @@ interactions:
       Connection: [keep-alive]
       Content-Length: ['512']
       Content-MD5: [nH9NqmxFCXbU1ecESXq2ug==]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [86f6c47a-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:36 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c7f17c40-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:42 GMT']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer4c9b1007/blob4c9b1007?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [nH9NqmxFCXbU1ecESXq2ug==]
-      Date: ['Fri, 09 Nov 2018 23:09:35 GMT']
-      ETag: ['"0x8D646986B283440"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:36 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:42 GMT']
+      ETag: ['"0x8D6BBFAAC2755A5"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:42 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['0']
-      x-ms-request-id: [3c395aaa-b01e-001e-1581-7815c6000000]
+      x-ms-request-id: [aed32d4c-101e-00a0-30e3-ed9bb2000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 version: 1
